--- a/app/pug/common/layout.pug
+++ b/app/pug/common/layout.pug
@@ -6,6 +6,6 @@ html(lang="ru-RU")
         block content
             div Hello I'm Content!
 
-        block footer
-            include _footer
-            include _js
+            block footer
+                //- include _footer
+                //- include _js
