--- a/app/pug/payment.pug
+++ b/app/pug/payment.pug
@@ -1,6 +1,6 @@
 extends common/layout
 
 block content
-    include includes/index/main
+    include includes/payment/main
     block footer
         include common/_footer
