--- a/app/static/scss/_animations.scss
+++ b/app/static/scss/_animations.scss
@@ -52,3 +52,21 @@
         transform: translateY(0%);
     }
 }
+
+// @keyframes quiz-anim-aside {
+//     from {
+//         transform: translateY(-100%);
+//     }
+//     to {
+//         transform: translateY(0);
+//     }
+// }
+
+// @keyframes quiz-anim-content {
+//     from {
+//         transform: translateY(100%);
+//     }
+//     to {
+//         transform: translateY(0);
+//     }
+// }
