--- a/app/pug/common/_css.pug
+++ b/app/pug/common/_css.pug
@@ -1,1 +1,2 @@
 link(rel='stylesheet' href='./css/main.css' type='text/css')
+link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css")
