--- a/app/pug/common/_js.pug
+++ b/app/pug/common/_js.pug
@@ -1,1 +1,4 @@
-script(async src='./js/app-min.js')
+//- script(src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js")
+//- script(src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js")
+script(src="./js/libs/swiper-bundle.min.js")
+script(src='./js/app-min.js')
