--- a/app/pug/includes/index/main.pug
+++ b/app/pug/includes/index/main.pug
@@ -1,7 +1,7 @@
 main.container
     include ../_common/header
     h1 
-        span Создайте своё 
+        | Создайте своё 
         br
         | идеальное тело
 
