--- a/app/static/scss/modules/quiz/quiz.scss
+++ b/app/static/scss/modules/quiz/quiz.scss
@@ -50,7 +50,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
     z-index: 0;
     display: none;
 
@@ -238,6 +238,7 @@
 .quiz-answer-frame {
     // margin: 32px 0;
     margin-top: 32px;
+    // display: block;
     overflow: auto;
 
     // flex-shrink: 0;
@@ -435,34 +436,65 @@
 
 
 // LIKER
-.quiz-liker {
-    // height: 220px;
+
+
+.swiper {
+    width: 240px;
+    // max-width: 100%;
+    // height: 320px;
+    // height: 240px;
 }
 
-.quiz-liker-item-group {
-    display: flex;
-    position: relative;
-    height: 250px;
+.swiper-slide {
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // border-radius: 18px;
+    height: 300px;
+}
+
+.quiz-liker {
+    // height: 220px;
+    // max-width: 100%;
     overflow: hidden;
 }
 
+.quiz-liker-item-group {
+    // display: flex;
+    // position: relative;
+    // height: 250px;
+    // overflow: hidden;
+}
+
 .quiz-liker-item {
-    position: absolute;
-    &.current {
+    transition: var(--tr);
+    &.voted {
+        background-color: var(--purple);
+        .quiz-liker-img {
+            opacity: .5;
+        }
         .quiz-liker-desc {
-            opacity: 1;
+            opacity: .5;
         }
     }
 }
 
 .quiz-liker-img {
-    width: 190px;
-    height: 190px;
+    // width: 190px;
+    // height: 190px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: var(--tr);
+    // opacity: .2;
 }
 
 .quiz-liker-vote-group {
     margin-top: 32px;
     display: flex;
+    text-align: center;
+    justify-content: center;
 }
 
 .quiz-liker-vote {
@@ -515,5 +547,5 @@
     background-color: #1e1d20;
     padding: 16px;
     text-align: center;
-    opacity: 0;
+    transition: var(--tr);
 }
