--- a/app/pug/common/head.pug
+++ b/app/pug/common/head.pug
@@ -2,8 +2,9 @@ head
     title Man Muscles
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, minimal-ui')
     meta(name='description' content='Man Muscles')
+    meta(name="apple-mobile-web-app-capable" content="yes")
 
     include _css
     
