--- a/app/static/scss/modules/quiz/quiz.scss
+++ b/app/static/scss/modules/quiz/quiz.scss
@@ -7,7 +7,7 @@
     // height: calc(100vh - 64px);
     // max-height: calc(100vh - 64px);
     // max-height: 800px;
-    min-height: 60vh;
+    // min-height: 60vh;
     display: flex;
     // align-items: flex-start;
     align-items: stretch;
@@ -18,6 +18,9 @@
         margin: 8px 0;
         height: calc(100vh - 16px);
     }
+
+    margin: 8px 0;
+    height: calc(100vh - 16px);
 }
 
 .quiz-logo {
@@ -159,6 +162,11 @@
     display: flex;
     justify-content: center;
     // padding: 16px;
+    padding: 16px;
+
+    @include respond-to (small) {
+        padding: 8px;
+    }
 }
 
 .quiz-counter {
@@ -218,7 +226,6 @@
 #quiz-progress {
     height: 4px;
     width: 100%;
-    flex-grow: 1;
     position: absolute;
     top: 0;
     left: 0;
@@ -240,6 +247,7 @@
     margin-top: 32px;
     // display: block;
     overflow: auto;
+    flex-grow: 1;
 
     // flex-shrink: 0;
     // flex-grow: 5;
@@ -326,6 +334,10 @@
 
     &.selected {
         background-color: rgba(83, 15, 255, 0.25);
+
+        .input-checkbox-main-text {
+            opacity: .5;
+        }
     }
 
     &:not(:first-child) {
@@ -365,6 +377,7 @@
 
 .input-checkbox-main-text {
     font-size: 20px;
+    transition: var(--tr);
 }
 
 .input-radio-desc-text {
@@ -457,6 +470,7 @@
     // height: 220px;
     // max-width: 100%;
     overflow: hidden;
+    min-height: 100%;
 }
 
 .quiz-liker-item-group {
@@ -468,11 +482,14 @@
 
 .quiz-liker-item {
     transition: var(--tr);
+
     &.voted {
         background-color: var(--purple);
+
         .quiz-liker-img {
             opacity: .5;
         }
+
         .quiz-liker-desc {
             opacity: .5;
         }
