--- a/app/static/scss/modules/quiz/quiz.scss
+++ b/app/static/scss/modules/quiz/quiz.scss
@@ -566,3 +566,10 @@
     text-align: center;
     transition: var(--tr);
 }
+
+
+.quiz-liker-voted-message {
+    text-align: center;
+    display: none;
+    margin-top: 32px;
+}
