--- a/app/pug/includes/_common/header.pug
+++ b/app/pug/includes/_common/header.pug
@@ -1,6 +1,6 @@
 .header 
     .header-logo
-        img(src="./assets/images/logo.png" loading="lazy")
+        img(src="./assets/images/logo.webp" loading="lazy")
     a.header-sign-in(href="#") 
         include ../_icons/sign-in.pug
         span Войти 
