--- a/app/pug/includes/index/main.pug
+++ b/app/pug/includes/index/main.pug
@@ -10,20 +10,20 @@ main.container
         .start-quiz-select-group
             button.start-quiz-select
                 picture.start-quiz-select__img
-                    source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-1-768.png")
-                    img(src="./assets/images/start-quiz-select-1.png", alt="")
+                    source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-1-768.webp")
+                    img(src="./assets/images/start-quiz-select-1.webp", alt="")
                 .start-quiz-select__name Похудеть
             button.start-quiz-select
                 picture.start-quiz-select__img
-                    source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-2-768.png")
-                    img(src="./assets/images/start-quiz-select-2.png", alt="")
+                    source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-2-768.webp")
+                    img(src="./assets/images/start-quiz-select-2.webp", alt="")
                 .start-quiz-select__name Увеличение 
                     br 
                     | мышечной массы
             button.start-quiz-select
                 picture.start-quiz-select__img
-                    source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-3-768.png")
-                    img(src="./assets/images/start-quiz-select-3.png", alt="")
+                    source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-3-768.webp")
+                    img(src="./assets/images/start-quiz-select-3.webp", alt="")
                 .start-quiz-select__name Засушиться
 
         .start-quiz-input-group
