--- a/app/pug/includes/payment/main.pug
+++ b/app/pug/includes/payment/main.pug
@@ -6,11 +6,11 @@ main.container
 
     .link-banner-group
         a.link-banner.purple(href="#")
-            img(src="./assets/images/food.png" alt="" loading="lazy")
+            img(src="./assets/images/food.webp" alt="" loading="lazy")
             .link-banner-text 
                 span План питания для поддержания формы
         a.link-banner.white(href="#")
-            img(src="./assets/images/man.png" alt="" loading="lazy")
+            img(src="./assets/images/man.webp" alt="" loading="lazy")
             .link-banner-text
                 span Ежедневная тренировка от тренера ManMuscles
 
