--- a/app/static/scss/modules/payment/payment.scss
+++ b/app/static/scss/modules/payment/payment.scss
@@ -103,7 +103,7 @@
     }
 
     &.purple {
-        background-image: url('./../assets/images/link-banner-1.png');
+        background-image: url('./../assets/images/link-banner-1.webp');
         color: #fff;
 
         img {
@@ -112,7 +112,7 @@
     }
 
     &.white {
-        background-image: url('./../assets/images/link-banner-2.png');
+        background-image: url('./../assets/images/link-banner-2.webp');
         color: #303030;
 
         img {
