--- a/app/static/scss/modules/_common/_footer.scss
+++ b/app/static/scss/modules/_common/_footer.scss
@@ -187,6 +187,9 @@ footer {
             width: 100%;
             text-align: center;
         }
+        span {
+            background-color: transparent;
+        }
     }
 }
 
