--- a/app/static/scss/modules/payment/payment.scss
+++ b/app/static/scss/modules/payment/payment.scss
@@ -121,6 +121,7 @@
 
         @include respond-to (handlers) {
             flex-direction: row-reverse;
+
             img {
                 max-height: 140px;
             }
@@ -146,6 +147,7 @@
         width: 100%;
         flex: unset;
         margin-right: 0 !important;
+
         &:last-child {
             margin-top: 24px;
         }
@@ -181,5 +183,95 @@
         flex-wrap: wrap;
         margin: 42px 0 32px 0;
     }
-    
+
+}
+
+.input-group {
+    margin: 32px 0;
+}
+
+.payment-content {
+    display: flex;
+    align-items: flex-end;
+
+    @include respond-to (small) {
+        flex-wrap: wrap;
+    }
+
+    h2 {
+        @include respond-to (small) {
+            font-size: calc(var(--index) * 2.5 + 4px);
+        }
+    }
+}
+
+.payment-content-price {
+    display: flex;
+    margin: 16px 0;
+
+    span {
+        padding: 8px 16px;
+        display: flex;
+        align-items: center;
+
+        &:first-child {
+            font-family: Bebas Neue, sans-serif;
+            font-size: calc(var(--index) * 2.25);
+            background-color: rgba(83, 15, 255, 0.5);
+
+            @include respond-to(large) {
+                font-size: calc(var(--index) * 3 + 4px);
+            }
+        }
+
+        &:last-child {
+            background-color: rgba(83, 15, 255, 0.2);
+            font-size: calc(var(--index) * 1);
+            padding: 8px 32px;
+
+            @include respond-to(medium) {
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+
+.payment-content-column {
+    flex: 1 1 0;
+    position: relative;
+
+    &:last-child {
+        margin-left: 16px;
+    }
+
+    @include respond-to (small) {
+        flex: unset;
+        width: 100%;
+
+        &:last-child {
+            margin-left: 0;
+            margin-top: 32px;
+        }
+    }
+}
+
+.payment-content-image {
+    width: 100%;
+}
+
+.payment-content-arrow {
+    position: relative;
+    img {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 90%;
+        object-fit: contain;
+        @include respond-to (medium) {
+            width: 50%;
+            right: 20px;
+        }
+    }
 }
