--- a/app/pug/includes/payment/main.pug
+++ b/app/pug/includes/payment/main.pug
@@ -29,7 +29,15 @@ main.container
             a.btn-large(href="#") оформить заказ
             
         .payment-content-column
-            img.payment-content-image(src="./assets/images/graphics.webp" alt="" loading="lazy")
+            .payment-content-image
+                img(src="./assets/images/graphics.webp" alt="" loading="lazy")
+                .payment-content-graphics-from 75кг
+                .payment-content-graphics-to Ваша цель
+                
+                .payment-content-graphics-dates 
+                    .graphics-dates__start 19 июля
+                    .graphics-dates__end 9 августа
+
         
 
     .input-group
