--- a/app/pug/includes/quiz/quiz.pug
+++ b/app/pug/includes/quiz/quiz.pug
@@ -62,18 +62,19 @@ main.container.fullscreen
                             .input-radio-main-text Эндоморф
                             .input-radio-desc-text Легко набирает вес по сравнению с другими типами тела.
 
-                .quiz-extra-content
-                    .quiz-extra-content-column.quiz-extra-content-img
-                        img(src="./assets/images/q-1_2.webp" loading="lazy")
-                    .quiz-extra-content-column
-                        h4 Тест для определения типа тела
-                        p Захватите противоположное запястье большим и указательным пальцами. Если вы правша, схватите левое запястье правой рукой. Помните, нет хороших или плохих типов тела.
-                        h4 Большой и указательный палец:
-                        p Эктоморф - обертывание с легкостью
-                            br
-                            | Мезоморф - прикосновения друг к другу
-                            br
-                            | Эндоморф - не вступает в контакт
+                    .quiz-extra-content
+                        .quiz-extra-content-column.quiz-extra-content-img
+                            img(src="./assets/images/q-1_2.webp" loading="lazy")
+                        .quiz-extra-content-column
+                            .quiz-extra-content-text
+                                h4 Тест для определения типа тела
+                                p Захватите противоположное запястье большим и указательным пальцами. Если вы правша, схватите левое        запястье правой рукой. Помните, нет хороших или плохих типов тела.
+                                h4 Большой и указательный палец:
+                                p Эктоморф - обертывание с легкостью
+                                    br
+                                    | Мезоморф - прикосновения друг к другу
+                                    br
+                                    | Эндоморф - не вступает в контакт
 
             //- q-2
             .quiz-question
