--- a/app/static/scss/modules/payment/payment.scss
+++ b/app/static/scss/modules/payment/payment.scss
@@ -258,10 +258,74 @@
 
 .payment-content-image {
     width: 100%;
+    position: relative;
+
+    img {
+        width: 100%;
+    }
+}
+
+.payment-content-graphics-from,
+.payment-content-graphics-to {
+    position: absolute;
+    padding: 16px;
+    font-size: 18px;
+
+    @include respond-to (medium) {
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+.payment-content-graphics-to {
+    top: 0;
+    right: 0;
+}
+
+.payment-content-graphics-from {
+    bottom: 30%;
+    left: 0;
+}
+
+.payment-content-graphics-dates {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    @include respond-to (medium) {
+        padding: 12px 8px;
+    }
+}
+
+.graphics-dates__start,
+.graphics-dates__end {
+    font-size: 24px;
+    padding: 8px 16px;
+    font-weight: 600;
+
+    @include respond-to (medium) {
+        font-size: 16px;
+        // padding: 8px;
+    }
+}
+
+.graphics-dates__start {
+    background-color: rgba(255, 255, 255, 0.075);
+    color: #fff;
+}
+
+.graphics-dates__end {
+    color: #000;
+    background-color: #fff;
 }
 
 .payment-content-arrow {
     position: relative;
+
     img {
         position: absolute;
         bottom: 0;
@@ -269,6 +333,7 @@
         width: 100%;
         height: 90%;
         object-fit: contain;
+
         @include respond-to (medium) {
             width: 50%;
             right: 20px;
