--- a/app/pug/includes/index/main.pug
+++ b/app/pug/includes/index/main.pug
@@ -5,22 +5,22 @@ main.container
         br
         | идеальное тело
 
-    form#start-quiz
+    form#start-quiz(action="#")
         .label Выберите свою цель: 
         .start-quiz-select-group
-            button.start-quiz-select
+            button.start-quiz-select(type="submit")
                 picture.start-quiz-select__img
                     source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-1-768.webp")
                     img(src="./assets/images/start-quiz-select-1.webp", alt="")
                 .start-quiz-select__name Похудеть
-            button.start-quiz-select
+            button.start-quiz-select(type="submit")
                 picture.start-quiz-select__img
                     source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-2-768.webp")
                     img(src="./assets/images/start-quiz-select-2.webp", alt="")
                 .start-quiz-select__name Увеличение 
                     br 
                     | мышечной массы
-            button.start-quiz-select
+            button.start-quiz-select(type="submit")
                 picture.start-quiz-select__img
                     source(media="(max-width: 768px)" srcset="./assets/images/start-quiz-select-3-768.webp")
                     img(src="./assets/images/start-quiz-select-3.webp", alt="")
@@ -28,7 +28,7 @@ main.container
 
         .start-quiz-input-group
             label.input-item
-                input(type="checkbox") 
+                input(type="checkbox" required) 
                 span.checkbox
                 span Продолжая, я соглашаюсь с 
                     a(href="#") Условия использования
@@ -41,6 +41,6 @@ main.container
                     | , 
                     a(href="#") Политика cookies
             label.input-item
-                input(type="checkbox") 
+                input(type="checkbox" checked) 
                 span.checkbox
                 span Я хочу получать новости о продуктах, услугах и специальных предложениях от ManMuscles по электронной почте.
