--- a/app/static/scss/modules/payment/payment.scss
+++ b/app/static/scss/modules/payment/payment.scss
@@ -108,6 +108,10 @@
 
         img {
             margin-left: 16px;
+            @include respond-to (handlers) {
+                margin-left: 8px;
+                max-width: 100px;
+            }
         }
     }
 
@@ -117,13 +121,14 @@
 
         img {
             margin-left: 16px;
+            max-height: 200px;
         }
 
         @include respond-to (handlers) {
             flex-direction: row-reverse;
 
             img {
-                max-height: 140px;
+                max-height: 100px;
             }
         }
     }
@@ -143,13 +148,13 @@
     }
 
     @include respond-to (handlers) {
-        height: calc(var(--index) * 6 + 40px);
+        height: calc(var(--index) * 6 + 20px);
         width: 100%;
         flex: unset;
         margin-right: 0 !important;
 
         &:last-child {
-            margin-top: 24px;
+            margin-top: 8px;
         }
     }
 }
@@ -169,8 +174,10 @@
     }
 
     @include respond-to(handlers) {
-        font-size: calc(var(--index) * 1.5);
+        // font-size: calc(var(--index) * 1.5);
+        font-size: 14px;
         margin-left: 4px;
+        padding: 8px;
     }
 }
 
@@ -181,7 +188,7 @@
 
     @include respond-to(handlers) {
         flex-wrap: wrap;
-        margin: 42px 0 32px 0;
+        margin: 24px 0 18px 0;
     }
 
 }
@@ -190,7 +197,7 @@
     margin: 32px 0;
 }
 
-.payment-content {
+.payment-content-row {
     display: flex;
     align-items: flex-end;
 
@@ -262,6 +269,9 @@
 
     img {
         width: 100%;
+        @include respond-to (xlarge) {
+            max-height: 290px;
+        }
     }
 }
 
